Fix potential memory leaks in nsDataChannel.  Bug 138081, r=timeless, sr=darin